--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,6 +12,6 @@ layout: default
 		</article>
 	</div>
 	<div class="medium-3 columns ad">
-		<a href="#"><img src="/assets/images/banner.jpg"></a>
+		<a href="#"><img src="/assets/images/Banner.jpg"></a>
 	</div>
 </div>
