--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,14 @@
   {% include google-analytics.html %}
   <script data-ad-client="ca-pub-9224237546426585" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   {% endif %}
+  
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self';
+  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://connect.facebook.net https://www.google-analytics.com https://ssl.google-analytics.com https://www.google-analytics.com https://www.googleadservices.com https://www.google.com https://tagmanager.google.com;
+  img-src 'self' www.googletagmanager.com https://track.merelation.com *.facebook.com https://www.google-analytics.com https://googleads.g.doubleclick.net https://www.google.com https://www.googleadservices.com https://googleads.g.doubleclick.net https://ssl.gstatic.com https://www.gstatic.com;
+  style-src 'self' 'unsafe-inline' https://tagmanager.google.com https://fonts.googleapis.com;
+  frame-src 'self' *.facebook.com https://bid.g.doubleclick.net;
+  connect-src https://www.google-analytics.com;
+  font-src 'self' data: https://fonts.gstatic.com;
+  ">
+  
 </head>
