add twitter card

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,27 @@
   {% include google-analytics.html %}
   <script data-ad-client="ca-pub-9224237546426585" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   {% endif %}
+
+  <!-- Test Start -->
+  <title>The C++ Alliance | The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries..</title>
+        <meta name="generator" content="Jekyll v3.8.7"/>
+        <meta property="og:title" content="The C++ Alliance"/>
+        <meta property="og:locale" content="en_US"/>
+        <meta name="description" content="The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries."/>
+        <meta property="og:description" content="The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries."/>
+        <link rel="canonical" href="https://cppalliance.org/"/>
+        <meta property="og:url" content="http://cppalliance.org/"/>
+        <meta property="og:site_name" content="The C++ Alliance"/>
+        <meta name="twitter:card" content="summary"/>
+        <meta property="twitter:title" content="The C++ Alliance"/>
+        <meta name="twitter:site" content="@CPPAlliance"/>
+        <script type="application/ld+json">
+            
+{"name":"The C++ Alliance","description":"The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries.","@type":"WebSite","url":"http://cppalliance.org/","headline":"The C++ Alliance","@context":"https://schema.org"}
+        </script>
+
+        <meta name="twitter:image" content="https://cppalliance.org/images/logo.svg">
+  <!-- Test End -->
   
   
 </head>
