--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,7 @@
 {"name":"The C++ Alliance","description":"The C++ Alliance is dedicated to helping the C++ programming language evolve. We see it developing as an ecosystem of open source libraries and as a growing community of those who contribute to those libraries.","@type":"WebSite","url":"http://cppalliance.org/","headline":"The C++ Alliance","@context":"https://schema.org"}
         </script>
 
-        <meta name="twitter:image" content="https://rendrap.com/images/logo.png">
+        <meta name="twitter:image" content="https://rendrap.com/assets/images/logo.png">
   <!-- Test End -->
   
   
